--- a/src/main/resources/templates/Country.html
+++ b/src/main/resources/templates/Country.html
@@ -420,7 +420,7 @@
 					<td>
 					<div class="btn-group"> 
 					<a th:href="@{/countries/findById/(id=${country.id})}" class ="btn btn-primary" id="editButton">Edit</a>
-					
+					<a th:href="@{/countries/delete/(id=${country.id})}" class ="btn btn-primary" id="deleteButton">Delete</a>
 					</div>
 					</td>
              
@@ -550,7 +550,30 @@
 </div>
  <!-- Edit Modal section End -->  
 
-  
+
+
+  <!-- Delete Modal Start  -->
+ <div class="modal" id="deleteModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Confirm Delete </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete this record?</p>
+      </div>
+      <div class="modal-footer">
+         <a class="btn btn-primary" id="confirmDeleteButton" href="" >Save changes</a>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+  <!-- Delete Modal End  -->
+ 
   
   <!-- javascripts -->
   <script src="js/jquery.js"></script>
