--- a/src/main/resources/templates/Country.html
+++ b/src/main/resources/templates/Country.html
@@ -420,7 +420,7 @@
 					<td>
 					<div class="btn-group"> 
 					<a th:href="@{/countries/findById/(id=${country.id})}" class ="btn btn-primary" id="editButton">Edit</a>
-					<a th:href="@{/countries/delete/(id=${country.id})}" class ="btn btn-primary" id="deleteButton">Delete</a>
+					<a th:href="@{/countries/delete/(id=${country.id})}" class ="btn btn-danger" id="deleteButton">Delete</a>
 					</div>
 					</td>
              
@@ -566,8 +566,8 @@
         <p>Are you sure you want to delete this record?</p>
       </div>
       <div class="modal-footer">
-         <a class="btn btn-primary" id="confirmDeleteButton" href="" >Save changes</a>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+         <a class="btn btn-primary" id="confirmDeleteButton" href="" >Yes, Delete</a>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
       </div>
     </div>
   </div>
