--- a/src/main/resources/templates/Country.html
+++ b/src/main/resources/templates/Country.html
@@ -392,40 +392,42 @@
      <!--   Page content goes here-->
         
         <h1> List of Countries </h1>
+           
+        <div class="row"> 
+        <div class="col-lg-12"> 
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">New Country</button> 
         
-        <div class="row">
-        <div class="col-lg-12">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">New Country</button>
-        
-        <table class="table">
-                <thead>
-                  <tr>
-                    <th>Id</th>
-                    <th>Code</th>
-                    <th>Capital </th>
-                    <th> description</th>
-                    <th> nationality</th>
-                    <th>continent </th>
-                    <th>Actions</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr th:each="country:${countries}"> 
-                    <td th:text="${country.id}"></td>
-                    <td th:text="${country.code}"></td>
-                    <td th:text="${country.capital}"></td>
-                    <td th:text="${country.description}"></td>	
-                    <td th:text="${country.nationality}"></td>	
-                    <td th:text="${country.continent}"></td>	
-					<td>
-					<div class="btn-group"> 
-					<a th:href="@{/countries/findById/(id=${country.id})}" class ="btn btn-primary" id="editButton">Edit</a>
-					<a th:href="@{/countries/delete/(id=${country.id})}" class ="btn btn-danger" id="deleteButton">Delete</a>
-					</div>
-					</td>
-             
-                  </tr>
-         </tbody>
+        <table class="table"> 
+                <thead> 
+          <tr>
+            <th>Id</th>
+            <th>Code</th>
+            <th>Capital </th>
+            <th> description</th>
+            <th> nationality</th>
+            <th>continent </th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+    <tbody>
+      <tr th:each="country:${countries}"> 
+        <td th:text="${country.id}"></td>
+        <td th:text="${country.code}"></td>
+        <td th:text="${country.capital}"></td>
+        <td th:text="${country.description}"></td>	
+        <td th:text="${country.nationality}"></td>	
+        <td th:text="${country.continent}"></td>	
+		<td>
+		<div class="btn-group"> 
+		<a th:href="@{/countries/findById/(id=${country.id})}" class ="btn btn-primary" id="editButton"><i class="icon_pencil-edit"></i></a>
+		<a  class ="btn btn-succes" id="detailButton"><i class="icon_document_alt"></i></a>
+		<a th:href="@{/countries/delete/(id=${country.id})}" class ="btn btn-danger" id="deleteButton"><i class="icon_close_alt2"></i></a>
+
+		</div>
+		</td>
+ 
+      </tr>
+     </tbody>
          </table>
          
         <!-- page end-->
