--- a/src/main/resources/templates/State.html
+++ b/src/main/resources/templates/State.html
@@ -388,10 +388,42 @@
             </ol>
           </div>
         </div>
+        
         <!-- page start-->
-        Page content goes here
+       <!--  Page content goes here -->
         
         <h1> List of States </h1>
+        
+            <div class="row"> 
+        <div class="col-lg-12"> 
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">New State</button> 
+        
+        <table class="table"> 
+                <thead> 
+          <tr>
+            <th><i class="icon_table"></i> Id</th>
+            <th><i class="icon_table"></i> Name</th>
+            <th><i class="icon_table"> </i> Details</th>            
+            <th><i class="icon_cogs"></i> Actions</th>
+          </tr>
+        </thead>
+    <tbody>
+      <tr th:each="state:${states}"> 
+        <td th:text="${state.id}"></td>
+        <td th:text="${state.name}"></td>
+        <td th:text="${state.details}"></td>
+		<td>
+		<div class="btn-group"> 
+		<a th:href="@{/countries/findById/(id=${state.id})}" class ="btn btn-primary" id="editButton"><i class="icon_pencil-edit"></i></a>
+		<a  class ="btn btn-succes" id="detailButton"><i class="icon_document_alt"></i></a>
+		<a th:href="@{/countries/delete/(id=${state.id})}" class ="btn btn-danger" id="deleteButton"><i class="icon_close_alt2"></i></a>
+
+		</div>
+		</td>
+ 
+      </tr>
+     </tbody>
+         </table>
         
         <!-- page end-->
       </section>
