--- a/src/main/resources/templates/Country.html
+++ b/src/main/resources/templates/Country.html
@@ -405,8 +405,7 @@
             <th>Capital </th>
             <th> description</th>
             <th> nationality</th>
-            <th>continent </th>
-            <th>Actions</th>
+
           </tr>
         </thead>
     <tbody>
@@ -415,12 +414,10 @@
         <td th:text="${country.code}"></td>
         <td th:text="${country.capital}"></td>
         <td th:text="${country.description}"></td>	
-        <td th:text="${country.nationality}"></td>	
-        <td th:text="${country.continent}"></td>	
 		<td>
 		<div class="btn-group"> 
 		<a th:href="@{/countries/findById/(id=${country.id})}" class ="btn btn-primary" id="editButton"><i class="icon_pencil-edit"></i></a>
-		<a  class ="btn btn-succes" id="detailButton"><i class="icon_document_alt"></i></a>
+		<a th:href="@{/countries/findById/(id=${country.id})}"  class ="btn btn-success" id="detailsButton"><i class="icon_document_alt"></i></a>
 		<a th:href="@{/countries/delete/(id=${country.id})}" class ="btn btn-danger" id="deleteButton"><i class="icon_close_alt2"></i></a>
 
 		</div>
@@ -491,7 +488,7 @@
   </div>
 </div>
    <!-- Add Modal section End -->  
-
+ 
   
  <!-- Edit Modal section Start-->  
  <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -551,7 +548,61 @@
   </div>
 </div>
  <!-- Edit Modal section End -->  
-
+ 
+    <!-- Details Modal section Start -->  
+<div class="modal fade" id="detailsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Details </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      
+      <div class="modal-body">
+        <form th:action="@{/countries/details}" method="post">
+        
+         <div class="form-group">
+            <label for="recipient-name" class="col-form-label">ID:</label>
+            <input type="text" class="form-control" id="idDetails" name="id" readonly >
+          </div>
+      
+          <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Description:</label>
+            <input type="text" class="form-control" id="descriptionDetails" name="description" readonly>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Capital:</label>
+            <input type="text" class="form-control" id="capitalDetails" name="capital" readonly>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Code:</label>
+            <input type="text" class="form-control" id="codeDetails" name="code" readonly>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Continent:</label>
+            <input type="text" class="form-control" id="continentDetails" name="continent" readonly>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Nationality:</label>
+            <input type="text" class="form-control" id="nationalityDetails" name="nationality" readonly>
+          </div>
+   
+        </form>
+      </div>
+      
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+   <!-- Details Modal section End -->  
 
 
   <!-- Delete Modal Start  -->
@@ -588,6 +639,6 @@
   <script src="js/country.js"></script>
 
 
-</body>
+/body>
 
 </html>
