--- a/src/main/resources/templates/State.html
+++ b/src/main/resources/templates/State.html
@@ -436,7 +436,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New Country</h5>
+        <h5 class="modal-title" id="exampleModalLabel">New State</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -447,12 +447,12 @@
       
           <div class="form-group">
             <label for="recipient-name" class="col-form-label">Id:</label>
-            <input type="text" class="form-control" id="descriptionadd" name="description">
+            <input type="text" class="form-control" id="idAdd" name="id">
           </div>
           
              <div class="form-group">
             <label for="recipient-name" class="col-form-label">Country:</label>
-            <select class="form-control" id="addCountryEdit" name="countryid" ><!--this is the key countryid -->
+            <select class="form-control" id="addCountryDetails" name="countryId" ><!--this is the key stateid -->
             <option>-SELECT-</option>
             <option th:each="country : ${countries}"
             th:value="${country.id}"
@@ -551,7 +551,60 @@
 </div>
  <!-- Edit Modal section End -->  
 
-
+    <!-- Details Modal section Start -->  
+ <div class="modal fade" id="detailsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">State Details</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      
+      <div class="modal-body">
+       
+          <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Id:</label>
+            <input type="text" class="form-control" id="idDetails" name="id" readonly>
+          </div>
+          
+             <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Country:</label>
+            <select class="form-control" id="addCountryDetails" name="countryId" ><!--this is the key stateid -->
+            <option>-SELECT-</option>
+            <option th:each="country : ${countries}"
+            th:value="${country.id}"
+            th:text ="${country.description}">
+            </option>
+            </select>
+       
+          </div>
+          
+            <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Name:</label>
+            <input type="text" class="form-control" id="nameDetails" name="name" readonly>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Capital:</label>
+            <input type="text" class="form-control" id="capitalDetails" name="capital" readonly>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Code:</label>
+            <input type="text" class="form-control" id="codeDetails" name="code" readonly>
+          </div>  
+     
+      </div>
+      
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+   <!-- Details Modal section End -->  
 
   <!-- Delete Modal Start  -->
  <div class="modal" id="deleteModal" tabindex="-1" role="dialog">
