--- a/src/main/resources/templates/State.html
+++ b/src/main/resources/templates/State.html
@@ -414,8 +414,8 @@
         <td th:text="${state.details}"></td>
 		<td>
 		<div class="btn-group"> 
-		<a th:href="@{/states/findById/(id=${state.id})}" class ="btn btn-primary" id="editButton"><i class="icon_pencil-edit"></i></a>
-		<a  class ="btn btn-succes" id="detailButton"><i class="icon_document_alt"></i></a>
+		<a th:href="@{/states/findById/(id=${state.id})}" class ="btn btn-primary" id="editButton" ><i class="icon_pencil-edit"></i></a>
+		<a th:href="@{/states/findById/(id=${state.id})}" class ="btn btn-success" id="detailsButton"><i class="icon_document_alt"></i></a>
 		<a th:href="@{/states/delete/(id=${state.id})}" class ="btn btn-danger" id="deleteButton"><i class="icon_close_alt2"></i></a>
 
 		</div>
@@ -586,9 +586,9 @@
             <label for="recipient-name" class="col-form-label">Country:</label>
             <select class="form-control" id="addCountryDetails" name="countryId" ><!--this is the key stateid -->
            <option>-SELECT-</option>
-            <option th:each="country : ${countries}"
-            th:value="${country.id}"
-            th:text ="${country.description}">
+            <option th:each="state : ${states}"
+            th:value="${state.id}"
+            th:text ="${state.details}">
             </option>
             </select>
        
@@ -607,6 +607,11 @@
            <div class="form-group">
             <label for="recipient-name" class="col-form-label">Code:</label>
             <input type="text" class="form-control" id="codeDetails" name="code" readonly>
+          </div>  
+          
+          <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Details:</label>
+            <input type="text" class="form-control" id="detailsDetails" name="code" readonly>
           </div>  
      
       </div>
