--- a/src/main/resources/templates/State.html
+++ b/src/main/resources/templates/State.html
@@ -521,7 +521,7 @@
             <option>-SELECT-</option>
             <option th:each="country : ${countries}"
             th:value="${country.id}"
-            th:text ="${country.details}">
+            th:text ="${country.description}">
             </option>
             </select>
 
