Changing the logo

--- a/src/main/resources/templates/Location.html
+++ b/src/main/resources/templates/Location.html
@@ -38,7 +38,7 @@
       </div>
 
       <!--logo start-->
-      <a href="index.html" class="logo">Nice <span class="lite">Admin</span></a>
+      <a href="index.html" class="logo">Admin <span class="lite">Ships</span></a>
       <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
@@ -414,7 +414,6 @@
           </div>
         </div>
         <!-- page start-->
-        Page content goes here
         
         <h1> List of Locations </h1>
         
