--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -30,12 +30,7 @@
       <script src="js/lte-ie7.js"></script>
     <![endif]-->
 
-    <!-- =======================================================
-      Theme Name: NiceAdmin
-      Theme URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-      Author: BootstrapMade
-      Author URL: https://bootstrapmade.com
-    ======================================================= -->
+ 
 </head>
 
 <body>
@@ -49,7 +44,7 @@
       </div>
 
       <!--logo start-->
-      <a href="index.html" class="logo">Nice <span class="lite">Admin</span></a>
+      <a href="index.html" class="logo">Admin <span class="lite">Ships</span></a>
       <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
