--- a/src/main/resources/templates/State.html
+++ b/src/main/resources/templates/State.html
@@ -428,7 +428,7 @@
           <tr>
             <th><i class="icon_table"></i> Id</th>
             <th><i class="icon_table"></i> Name</th>
-            <th><i class="icon_table"> </i> Details</th>            
+            <th><i class="icon_table"> </i> Details</th>                    
             <th><i class="icon_cogs"></i> Actions</th>
           </tr>
         </thead>
@@ -608,14 +608,14 @@
           </div>
           
              <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Country:</label>
-            <select class="form-control" id="addCountryDetails" name="countryId" ><!--this is the key stateid -->
-           <option>-SELECT-</option>
+            <label for="recipient-name" class="col-form-label">Country:</label >
+            <select class="form-control" id="addCountryDetails" name="countryId" aria-readonly="true" ><!--this is the key stateid -->
+           <option>-SELECT-</option >
             <option th:each="state : ${states}"
             th:value="${state.id}"
             th:text ="${state.details}">
             </option>
-            </select>
+            </select >
        
           </div>
           
