--- a/src/main/resources/templates/Location.html
+++ b/src/main/resources/templates/Location.html
@@ -455,6 +455,226 @@
   </section>
   <!-- container section end -->
   
+   <!-- Add Modal section Start -->  
+ <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">New Location</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      
+      <div class="modal-body">
+        <form th:action="@{/locations/addNew}" method="post">
+      
+          <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Id:</label>
+            <input type="text" class="form-control" id="idAdd" name="id" readonly>
+          </div>
+          
+            <div class="form-group">
+            <label for="recipient-name" class="col-form-label">City:</label>
+            <input type="text" class="form-control" id="nameAdd" name="name" required>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Address:</label>
+            <input type="text" class="form-control" id="addressAdd" name="address" required>
+          </div>
+          
+             <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Country:</label>
+            <select class="form-control" id="addCountryDetails" name="countryId" ><!--this is the key stateid -->
+            <option>-SELECT-</option>
+            <option
+            th:each="country : ${countries}"
+            th:value="${country.id}"
+            th:text ="${country.description}"></option>
+            </select>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">State:</label>
+            <select class="form-control" id="addStateDetails" name="stateId" ><!--this is the key stateid -->
+            <option>-SELECT-</option>
+            <option th:each="state : ${states}"
+            th:value="${state.id}"
+            th:text ="${state.name}"></option>
+            </select>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Details:</label>
+            <input type="text" class="form-control" id="detailsAdd" name="details" required>
+          </div>
+    
+           <div class="form-group">
+             <button type="submit" class="btn btn-primary">Submit </button>
+          </div>
+        
+        </form>
+      </div>
+      
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+   <!-- Add Modal section End -->  
+
+  
+ <!-- Edit Modal section Start-->  
+ <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Edit State </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      
+      <div class="modal-body">
+        <form th:action="@{/states/update}" method="put">
+      
+       <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Id:</label>
+            <input type="text" class="form-control" id="idEdit" name="id" readonly>
+          </div>
+          
+          <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Country:</label>
+            <select class="form-control" id="addCountryEdit" name="countryId" ><!--this is the key stateid -->
+            <option>-SELECT-</option>
+            <option th:each="country : ${countries}"
+            th:value="${country.id}"
+            th:text ="${country.description}">
+            </option>
+            </select>
+
+          </div>
+          
+            <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Name:</label>
+            <input type="text" class="form-control" id="nameEdit" name="name" required>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Details:</label>
+            <input type="text" class="form-control" id="detailsEdit" name="details" required>
+          </div>
+          
+           
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Code:</label>
+            <input type="text" class="form-control" id="codeEdit" name="code" required>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Capital:</label>
+            <input type="text" class="form-control" id="capitalEdit" name="capital" required>
+          </div>
+          
+           <div class="form-group">
+             <button type="submit" class="btn btn-primary">Submit </button>
+          </div>
+          
+        </form>
+      </div>
+      
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>-->
+ <!-- Edit Modal section End -->  
+
+    <!-- Details Modal section Start -->  
+ <div class="modal fade" id="detailsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">State Details</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      
+      <div class="modal-body">
+       
+          <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Id:</label>
+            <input type="text" class="form-control" id="idDetails" name="id" readonly>
+          </div>
+          
+             <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Country:</label >
+            <select class="form-control" id="addCountryDetails" name="countryId" aria-readonly="true" ><!--this is the key stateid -->
+           <option>-SELECT-</option >
+            <option th:each="state : ${states}"
+            th:value="${state.id}"
+            th:text ="${state.details}">
+            </option>
+            </select >
+       
+          </div>
+          
+            <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Name:</label>
+            <input type="text" class="form-control" id="nameDetails" name="name" readonly>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Capital:</label>
+            <input type="text" class="form-control" id="capitalDetails" name="capital" readonly>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Code:</label>
+            <input type="text" class="form-control" id="codeDetails" name="code" readonly>
+          </div>  
+          
+          <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Details:</label>
+            <input type="text" class="form-control" id="detailsDetails" name="code" readonly>
+          </div>  
+     
+      </div>
+      
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+   <!-- Details Modal section End -->  
+
+  <!-- Delete Modal Start  -->
+ <div class="modal" id="deleteModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Confirm Delete </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete this record?</p>
+      </div>
+      <div class="modal-footer">
+         <a class="btn btn-primary" id="confirmDeleteButton" href="" >Yes, Delete</a>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
+  <!-- Delete Modal End  -->
   
   
   <!-- javascripts -->
