--- a/src/main/resources/templates/Location.html
+++ b/src/main/resources/templates/Location.html
@@ -419,7 +419,7 @@
         
          <div class="row"> 
         <div class="col-lg-12"> 
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add State</button> 
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add Location</button> 
         
         <table class="table"> 
                 <thead> 
@@ -476,7 +476,7 @@
           
             <div class="form-group">
             <label for="recipient-name" class="col-form-label">City:</label>
-            <input type="text" class="form-control" id="nameAdd" name="name" required>
+            <input type="text" class="form-control" id="nameAdd" name="city" required>
           </div>
           
            <div class="form-group">
