--- a/src/main/resources/templates/Location.html
+++ b/src/main/resources/templates/Location.html
@@ -476,7 +476,7 @@
           
             <div class="form-group">
             <label for="recipient-name" class="col-form-label">City:</label>
-            <input type="text" class="form-control" id="nameAdd" name="city" required>
+            <input type="text" class="form-control" id="cityAdd" name="city" required>
           </div>
           
            <div class="form-group">
@@ -486,7 +486,7 @@
           
              <div class="form-group">
             <label for="recipient-name" class="col-form-label">Country:</label>
-            <select class="form-control" id="addCountryDetails" name="countryId" ><!--this is the key stateid -->
+            <select class="form-control" id="addCountryDetails" name="countryid" ><!--this is the key stateid -->
             <option>-SELECT-</option>
             <option
             th:each="country : ${countries}"
@@ -497,7 +497,7 @@
           
            <div class="form-group">
             <label for="recipient-name" class="col-form-label">State:</label>
-            <select class="form-control" id="addStateDetails" name="stateId" ><!--this is the key stateid -->
+            <select class="form-control" id="addStateDetails" name="stateid" ><!--this is the key stateid -->
             <option>-SELECT-</option>
             <option th:each="state : ${states}"
             th:value="${state.id}"
@@ -531,52 +531,54 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Edit State </h5>
+        <h5 class="modal-title" id="exampleModalLabel">Edit Location </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       
       <div class="modal-body">
-        <form th:action="@{/states/update}" method="put">
+        <form th:action="@{/locations/update}" method="put">
       
        <div class="form-group">
             <label for="recipient-name" class="col-form-label">Id:</label>
             <input type="text" class="form-control" id="idEdit" name="id" readonly>
           </div>
           
-          <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Country:</label>
-            <select class="form-control" id="addCountryEdit" name="countryId" ><!--this is the key stateid -->
-            <option>-SELECT-</option>
-            <option th:each="country : ${countries}"
-            th:value="${country.id}"
-            th:text ="${country.description}">
-            </option>
-            </select>
-
+            <div class="form-group">
+            <label for="recipient-name" class="col-form-label">City:</label>
+            <input type="text" class="form-control" id="cityEdit" name="city" required>
           </div>
           
-            <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Name:</label>
-            <input type="text" class="form-control" id="nameEdit" name="name" required>
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Address:</label>
+            <input type="text" class="form-control" id="addressEdit" name="address" required>
+          </div>
+          
+             <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Country:</label>
+            <select class="form-control" id="editCountryDetails" name="countryid" ><!--this is the key stateid -->
+            <option>-SELECT-</option>
+            <option
+            th:each="country : ${countries}"
+            th:value="${country.id}"
+            th:text ="${country.description}"></option>
+            </select>
+          </div>
+          
+           <div class="form-group">
+            <label for="recipient-name" class="col-form-label">State:</label>
+            <select class="form-control" id="editStateDetails" name="stateid" ><!--this is the key stateid -->
+            <option>-SELECT-</option>
+            <option th:each="state : ${states}"
+            th:value="${state.id}"
+            th:text ="${state.name}"></option>
+            </select>
           </div>
           
            <div class="form-group">
             <label for="recipient-name" class="col-form-label">Details:</label>
             <input type="text" class="form-control" id="detailsEdit" name="details" required>
-          </div>
-          
-           
-          
-           <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Code:</label>
-            <input type="text" class="form-control" id="codeEdit" name="code" required>
-          </div>
-          
-           <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Capital:</label>
-            <input type="text" class="form-control" id="capitalEdit" name="capital" required>
           </div>
           
            <div class="form-group">
@@ -599,7 +601,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">State Details</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Location Details</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -678,6 +680,8 @@
   
   
   <!-- javascripts -->
+    
+    
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <!-- nice scroll -->
@@ -685,7 +689,7 @@
   <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
   <!--custome script for all page-->
   <script src="js/scripts.js"></script>
-
+<script src="js/location.js"></script>
 
 </body>
 
